rustparser/RustsurfaceParser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog_eof' -> . prog_eof [ # ]
## Transitions:
-- On STRUCT shift to state 1
-- On FN shift to state 61
-- On ENUM shift to state 223
-- On struct_decl shift to state 242
-- On struct_ shift to state 243
-- On prog_eof shift to state 252
-- On prog shift to state 253
-- On fn shift to state 245
-- On enum_decl shift to state 247
-- On enum shift to state 249
## Reductions:

State 1:
## Known stack suffix:
## STRUCT
## LR(1) items:
struct_ -> STRUCT . ID generic_origins origin_relations LBRACE composite_fields RBRACE [ STRUCT FN EOF ENUM ]
struct_decl -> STRUCT . ID generic_origins origin_relations SEMICOLON [ STRUCT FN EOF ENUM ]
## Transitions:
-- On ID shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## STRUCT ID
## LR(1) items:
struct_ -> STRUCT ID . generic_origins origin_relations LBRACE composite_fields RBRACE [ STRUCT FN EOF ENUM ]
struct_decl -> STRUCT ID . generic_origins origin_relations SEMICOLON [ STRUCT FN EOF ENUM ]
## Transitions:
-- On LANGLE shift to state 3
-- On generic_origins shift to state 9
## Reductions:
-- On WHERE SEMICOLON LBRACE
--   reduce production generic_origins ->

State 3:
## Known stack suffix:
## LANGLE
## LR(1) items:
generic_origins -> LANGLE . generic_origins_ RANGLE [ WHERE SEMICOLON RPAREN RBRACE RANGLE LPAREN LBRACE COMMA ASSIGN ]
## Transitions:
-- On ORIGIN shift to state 4
-- On generic_origins_ shift to state 7
## Reductions:
-- On RANGLE
--   reduce production generic_origins_ ->

State 4:
## Known stack suffix:
## ORIGIN
## LR(1) items:
generic_origins_ -> ORIGIN . [ RANGLE ]
generic_origins_ -> ORIGIN . COMMA generic_origins_ [ RANGLE ]
## Transitions:
-- On COMMA shift to state 5
## Reductions:
-- On RANGLE
--   reduce production generic_origins_ -> ORIGIN

State 5:
## Known stack suffix:
## ORIGIN COMMA
## LR(1) items:
generic_origins_ -> ORIGIN COMMA . generic_origins_ [ RANGLE ]
## Transitions:
-- On ORIGIN shift to state 4
-- On generic_origins_ shift to state 6
## Reductions:
-- On RANGLE
--   reduce production generic_origins_ ->

State 6:
## Known stack suffix:
## ORIGIN COMMA generic_origins_
## LR(1) items:
generic_origins_ -> ORIGIN COMMA generic_origins_ . [ RANGLE ]
## Transitions:
## Reductions:
-- On RANGLE
--   reduce production generic_origins_ -> ORIGIN COMMA generic_origins_

State 7:
## Known stack suffix:
## LANGLE generic_origins_
## LR(1) items:
generic_origins -> LANGLE generic_origins_ . RANGLE [ WHERE SEMICOLON RPAREN RBRACE RANGLE LPAREN LBRACE COMMA ASSIGN ]
## Transitions:
-- On RANGLE shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## LANGLE generic_origins_ RANGLE
## LR(1) items:
generic_origins -> LANGLE generic_origins_ RANGLE . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LPAREN LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LPAREN LBRACE COMMA ASSIGN
--   reduce production generic_origins -> LANGLE generic_origins_ RANGLE

State 9:
## Known stack suffix:
## STRUCT ID generic_origins
## LR(1) items:
struct_ -> STRUCT ID generic_origins . origin_relations LBRACE composite_fields RBRACE [ STRUCT FN EOF ENUM ]
struct_decl -> STRUCT ID generic_origins . origin_relations SEMICOLON [ STRUCT FN EOF ENUM ]
## Transitions:
-- On WHERE shift to state 10
-- On origin_relations shift to state 17
## Reductions:
-- On SEMICOLON LBRACE
--   reduce production origin_relations ->

State 10:
## Known stack suffix:
## WHERE
## LR(1) items:
origin_relations -> WHERE . origin_relations_ [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On ORIGIN shift to state 11
-- On origin_relations_ shift to state 16
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production origin_relations_ ->

State 11:
## Known stack suffix:
## ORIGIN
## LR(1) items:
origin_relations_ -> ORIGIN . COLON ORIGIN [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
origin_relations_ -> ORIGIN . COLON ORIGIN COMMA origin_relations_ [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On COLON shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## ORIGIN COLON
## LR(1) items:
origin_relations_ -> ORIGIN COLON . ORIGIN [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
origin_relations_ -> ORIGIN COLON . ORIGIN COMMA origin_relations_ [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On ORIGIN shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## ORIGIN COLON ORIGIN
## LR(1) items:
origin_relations_ -> ORIGIN COLON ORIGIN . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
origin_relations_ -> ORIGIN COLON ORIGIN . COMMA origin_relations_ [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On COMMA shift to state 14
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production origin_relations_ -> ORIGIN COLON ORIGIN
** Conflict on COMMA

State 14:
## Known stack suffix:
## ORIGIN COLON ORIGIN COMMA
## LR(1) items:
origin_relations_ -> ORIGIN COLON ORIGIN COMMA . origin_relations_ [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On ORIGIN shift to state 11
-- On origin_relations_ shift to state 15
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production origin_relations_ ->

State 15:
## Known stack suffix:
## ORIGIN COLON ORIGIN COMMA origin_relations_
## LR(1) items:
origin_relations_ -> ORIGIN COLON ORIGIN COMMA origin_relations_ . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production origin_relations_ -> ORIGIN COLON ORIGIN COMMA origin_relations_

State 16:
## Known stack suffix:
## WHERE origin_relations_
## LR(1) items:
origin_relations -> WHERE origin_relations_ . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production origin_relations -> WHERE origin_relations_

State 17:
## Known stack suffix:
## STRUCT ID generic_origins origin_relations
## LR(1) items:
struct_ -> STRUCT ID generic_origins origin_relations . LBRACE composite_fields RBRACE [ STRUCT FN EOF ENUM ]
struct_decl -> STRUCT ID generic_origins origin_relations . SEMICOLON [ STRUCT FN EOF ENUM ]
## Transitions:
-- On SEMICOLON shift to state 18
-- On LBRACE shift to state 19
## Reductions:

State 18:
## Known stack suffix:
## STRUCT ID generic_origins origin_relations SEMICOLON
## LR(1) items:
struct_decl -> STRUCT ID generic_origins origin_relations SEMICOLON . [ STRUCT FN EOF ENUM ]
## Transitions:
## Reductions:
-- On STRUCT FN EOF ENUM
--   reduce production struct_decl -> STRUCT ID generic_origins origin_relations SEMICOLON

State 19:
## Known stack suffix:
## STRUCT ID generic_origins origin_relations LBRACE
## LR(1) items:
struct_ -> STRUCT ID generic_origins origin_relations LBRACE . composite_fields RBRACE [ STRUCT FN EOF ENUM ]
## Transitions:
-- On ID shift to state 20
-- On composite_fields shift to state 59
## Reductions:
-- On RBRACE
--   reduce production composite_fields ->

State 20:
## Known stack suffix:
## ID
## LR(1) items:
composite_fields -> ID . COLON ty [ RPAREN RBRACE ]
composite_fields -> ID . COLON ty COMMA composite_fields [ RPAREN RBRACE ]
## Transitions:
-- On COLON shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## ID COLON
## LR(1) items:
composite_fields -> ID COLON . ty [ RPAREN RBRACE ]
composite_fields -> ID COLON . ty COMMA composite_fields [ RPAREN RBRACE ]
## Transitions:
-- On UINT8 shift to state 22
-- On UINT32 shift to state 23
-- On UINT16 shift to state 24
-- On REF shift to state 25
-- On LPAREN shift to state 29
-- On INT8 shift to state 31
-- On INT32 shift to state 32
-- On INT16 shift to state 33
-- On ID shift to state 34
-- On FN shift to state 36
-- On FLOAT64 shift to state 39
-- On FLOAT32 shift to state 40
-- On BOX shift to state 41
-- On BOOL shift to state 43
-- On ty shift to state 56
## Reductions:

State 22:
## Known stack suffix:
## UINT8
## LR(1) items:
ty -> UINT8 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> UINT8

State 23:
## Known stack suffix:
## UINT32
## LR(1) items:
ty -> UINT32 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> UINT32

State 24:
## Known stack suffix:
## UINT16
## LR(1) items:
ty -> UINT16 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> UINT16

State 25:
## Known stack suffix:
## REF
## LR(1) items:
ty -> REF . origin_opt MUT ty [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
ty -> REF . origin_opt ty [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On ORIGIN shift to state 26
-- On origin_opt shift to state 27
## Reductions:
-- On UINT8 UINT32 UINT16 REF MUT LPAREN INT8 INT32 INT16 ID FN FLOAT64 FLOAT32 BOX BOOL
--   reduce production origin_opt ->

State 26:
## Known stack suffix:
## ORIGIN
## LR(1) items:
origin_opt -> ORIGIN . [ UINT8 UINT32 UINT16 REF MUT LPAREN INT8 INT32 INT16 ID FN FLOAT64 FLOAT32 BOX BOOL ]
## Transitions:
## Reductions:
-- On UINT8 UINT32 UINT16 REF MUT LPAREN INT8 INT32 INT16 ID FN FLOAT64 FLOAT32 BOX BOOL
--   reduce production origin_opt -> ORIGIN

State 27:
## Known stack suffix:
## REF origin_opt
## LR(1) items:
ty -> REF origin_opt . MUT ty [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
ty -> REF origin_opt . ty [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On UINT8 shift to state 22
-- On UINT32 shift to state 23
-- On UINT16 shift to state 24
-- On REF shift to state 25
-- On MUT shift to state 28
-- On LPAREN shift to state 29
-- On INT8 shift to state 31
-- On INT32 shift to state 32
-- On INT16 shift to state 33
-- On ID shift to state 34
-- On FN shift to state 36
-- On FLOAT64 shift to state 39
-- On FLOAT32 shift to state 40
-- On BOX shift to state 41
-- On BOOL shift to state 43
-- On ty shift to state 55
## Reductions:

State 28:
## Known stack suffix:
## REF origin_opt MUT
## LR(1) items:
ty -> REF origin_opt MUT . ty [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On UINT8 shift to state 22
-- On UINT32 shift to state 23
-- On UINT16 shift to state 24
-- On REF shift to state 25
-- On LPAREN shift to state 29
-- On INT8 shift to state 31
-- On INT32 shift to state 32
-- On INT16 shift to state 33
-- On ID shift to state 34
-- On FN shift to state 36
-- On FLOAT64 shift to state 39
-- On FLOAT32 shift to state 40
-- On BOX shift to state 41
-- On BOOL shift to state 43
-- On ty shift to state 54
## Reductions:

State 29:
## Known stack suffix:
## LPAREN
## LR(1) items:
ty -> LPAREN . RPAREN [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On RPAREN shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## LPAREN RPAREN
## LR(1) items:
ty -> LPAREN RPAREN . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> LPAREN RPAREN

State 31:
## Known stack suffix:
## INT8
## LR(1) items:
ty -> INT8 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> INT8

State 32:
## Known stack suffix:
## INT32
## LR(1) items:
ty -> INT32 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> INT32

State 33:
## Known stack suffix:
## INT16
## LR(1) items:
ty -> INT16 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> INT16

State 34:
## Known stack suffix:
## ID
## LR(1) items:
ty -> ID . generic_origins [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On LANGLE shift to state 3
-- On generic_origins shift to state 35
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production generic_origins ->

State 35:
## Known stack suffix:
## ID generic_origins
## LR(1) items:
ty -> ID generic_origins . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> ID generic_origins

State 36:
## Known stack suffix:
## FN
## LR(1) items:
ty -> FN . generic_origins LPAREN params_ty RPAREN RARROW ty origin_relations [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On LANGLE shift to state 3
-- On generic_origins shift to state 37
## Reductions:
-- On LPAREN
--   reduce production generic_origins ->

State 37:
## Known stack suffix:
## FN generic_origins
## LR(1) items:
ty -> FN generic_origins . LPAREN params_ty RPAREN RARROW ty origin_relations [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On LPAREN shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## FN generic_origins LPAREN
## LR(1) items:
ty -> FN generic_origins LPAREN . params_ty RPAREN RARROW ty origin_relations [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On UINT8 shift to state 22
-- On UINT32 shift to state 23
-- On UINT16 shift to state 24
-- On REF shift to state 25
-- On LPAREN shift to state 29
-- On INT8 shift to state 31
-- On INT32 shift to state 32
-- On INT16 shift to state 33
-- On ID shift to state 34
-- On FN shift to state 36
-- On FLOAT64 shift to state 39
-- On FLOAT32 shift to state 40
-- On BOX shift to state 41
-- On BOOL shift to state 43
-- On ty shift to state 46
-- On params_ty shift to state 49
## Reductions:
-- On RPAREN
--   reduce production params_ty ->

State 39:
## Known stack suffix:
## FLOAT64
## LR(1) items:
ty -> FLOAT64 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> FLOAT64

State 40:
## Known stack suffix:
## FLOAT32
## LR(1) items:
ty -> FLOAT32 . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> FLOAT32

State 41:
## Known stack suffix:
## BOX
## LR(1) items:
ty -> BOX . LANGLE ty RANGLE [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On LANGLE shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## BOX LANGLE
## LR(1) items:
ty -> BOX LANGLE . ty RANGLE [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On UINT8 shift to state 22
-- On UINT32 shift to state 23
-- On UINT16 shift to state 24
-- On REF shift to state 25
-- On LPAREN shift to state 29
-- On INT8 shift to state 31
-- On INT32 shift to state 32
-- On INT16 shift to state 33
-- On ID shift to state 34
-- On FN shift to state 36
-- On FLOAT64 shift to state 39
-- On FLOAT32 shift to state 40
-- On BOX shift to state 41
-- On BOOL shift to state 43
-- On ty shift to state 44
## Reductions:

State 43:
## Known stack suffix:
## BOOL
## LR(1) items:
ty -> BOOL . [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
## Reductions:
-- On WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN
--   reduce production ty -> BOOL

State 44:
## Known stack suffix:
## BOX LANGLE ty
## LR(1) items:
ty -> BOX LANGLE ty . RANGLE [ WHERE SEMICOLON RPAREN RBRACE RANGLE LBRACE COMMA ASSIGN ]
## Transitions:
-- On RANGLE shift to state 45
## Reductions:
